# SolverArena

./: .gitignore  404.html  Pipfile  README.md  dataset_creator.py  example.py  index.html  mkdocs.yml  model_builder.py  pyproject.toml  run.py  search.html  setup.py  solver_glop.py
.github/workflows/: gh-pages.yml  publish.yml  run_tests.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  changelog.md  contributing.md  examples.md  getting_started.md  index.md  license.md
examples/: example.py  index.html
examples/datasets/: dataset100.json
examples/mps_files/: model_dataset100.mps
getting_started/: index.html
license/: index.html
mps_files/: model_dataset100.mps
results/: results_20240929_105249.csv  results_20240929_184940.csv  results_20240929_200950.csv  results_20241001_082619.csv
search/: search_index.json
solver_arena/: run.py
solver_arena/solvers/: glop_solver.py  gurobi_solver.py  highs_solver.py  pdlp_solver.py  scip_solver.py  solver_factory.py  utils.py
solverarena/: __init__.py  core.py  models.py  run.py  utils.py
solverarena/solvers/: cbc_solver.py  copt_solver.py  glop_solver.py  gurobi_solver.py  highs_solver.py  pdlp_solver.py  scip_solver.py  solver.py  solver_factory.py  utils.py
solvers/: gurobi_solver.py  highs_solver.py  solver.py  solver_factory.py
tests/: test_run.py
